# Projet-7-OPC

./: .dockerignore  .gitignore  Dockerfile  Missamou_Kephan_1_API_112024.py  Missamou_Kephan_1__API_112024.ipynb  Missamou_Kephan_2_notebook_modélisation_112024.ipynb  Missamou_Kephan_2_notebook_modélisation_112024.py  Missamou_Kephan_4_Tableau_HTML_data_drift_evidently_112024  Missamou_Kephan_4_Tableau_HTML_data_drift_evidently_112024.py  Missamou_Kephan_5_notebook_test_API_112024.py  Procfile  feature_importances.csv  feature_names.csv  feature_names.txt  heroku.yml  input_example.txt  input_example_for_api.txt  pyproject.toml  requirements.txt  shap_importances.csv
.github/workflows/: ci.yml
mlruns/0/: meta.yaml
mlruns/0/0740ed72266c4396b69bd4c804c53866/: meta.yaml
mlruns/0/09168bcbbfde41558c7c77baddadba3a/: meta.yaml
mlruns/0/23eab6feb4104effac732648354ba84c/: meta.yaml
mlruns/0/25b5b3174c2c40e5bbb0ed31eb3bee7e/: meta.yaml
mlruns/0/30d234e9ce1b476bb605b7df1c7fc767/: meta.yaml
mlruns/0/3dde06ae519744ef8657e2c4c705b9d9/: meta.yaml
mlruns/0/55317f22af5d4058be869d8c320fd7a2/: meta.yaml
mlruns/0/72538f88d7a040a58073953b1fdd247c/: meta.yaml
mlruns/0/79b3a077822d485591bf33a0c4eaccaf/: meta.yaml
mlruns/0/7c00911c87584555ba86f6204467f8a9/: meta.yaml
mlruns/0/abf4efbf4f12458693426ab24171c3aa/: meta.yaml
mlruns/0/b66420eabfa14a31a8ceb334d853b484/: meta.yaml
mlruns/0/b66c6faeb6cc45d6aa87972332bb8e00/: meta.yaml
mlruns/0/b834519177fa4d04ba67d7feededec4c/: meta.yaml
mlruns/161053704417020018/: meta.yaml
mlruns/167428589703094047/: meta.yaml
mlruns/272563713266354880/: meta.yaml
model/: MLmodel  python_env.yaml  requirements.txt
model_local/: MLmodel
tests/: import_test.py  test_utils.py  utils.py
(+586 files in other folders)
