[project]
name = "Projet-7-OPC"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "evidently>=0.6.5",
    "fastapi>=0.115.8",
    "imblearn>=0.0",
    "ipykernel>=6.29.5",
    "joblib>=1.4.2",
    "matplotlib>=3.10.0",
    "mlflow>=2.19.0",
    "numba>=0.61.0",
    "pandas>=2.2.3",
    "polars>=1.22.0",
    "pydantic>=2.10.6",
    "pytest>=8.3.4",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "shap>=0.46.0",
    "uvicorn>=0.34.0",
    "xgboost>=2.1.3",
]
requires-python = ">=3.13"
python-version = ">=3.13"
