[project]
name = "projet-7"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "imblearn>=0.0",
    "lightgbm>=4.6.0",
    "matplotlib>=3.9.4",
    "mlflow>=2.20.4",
    "numpy<2.0.0",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "shap>=0.47.0",
    "streamlit>=1.43.2",
    "xgboost>=2.1.4",
]

[dependency-groups]
dev = [
    "evidently>=0.5.0",
    "pydantic<2",
]
